--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body {
-    text-align: center;
-}
-svg{
+body{
     background-color: #e9edff;
+}
+#map {
+    text-align: center;
 }
 .counties {
     fill: #4ed360;
@@ -19,6 +19,21 @@ svg{
     stroke: #fff;
     stroke-width: 0.5px;
 }
+
+.tooltip{
+    background-color: white;
+    border: solid;
+    position: center;
+    padding: 4px;
+    border-width: 2px;
+    border-radius: 3px;
+    position: absolute;
+    text-align: center;
+    font-family: Microsoft JhengHei;
+    font-size: 15px;
+    visibility: hidden;
+}
+
 /* rent site */
 .stop-top-rentsite {
     stop-color: #6695fc; /* Indigo */
